--- a/Index.html
+++ b/Index.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Welcome to Saurav's Page</title>
-  </head>
-  <body>
-    <h1>Hello! This is saurav.github.io</h1>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Saurav Shakya - My Website</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 40px;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #1f4037, #99f2c8);
+      color: #111;
+      text-align: center;
+    }
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 0.5em;
+    }
+    p {
+      font-size: 1.3rem;
+      max-width: 700px;
+      margin: auto;
+    }
+    a {
+      color: #0077ff;
+      text-decoration: none;
+    }
+  </style>
+</head>
+<body>
+  <h1>🚀 Welcome to Saurav Shakya's GitHub Page</h1>
+  <p>Hi! I'm building <strong>Hackmind</strong> and <strong>Next Scientist</strong>, platforms for developers and researchers.</p>
+  <p>Visit my projects on <a href="https://github.com/Saurav-shakya" target="_blank">GitHub</a></p>
+</body>
 </html>
